--- a/cms-api/src/main/resources/application.properties
+++ b/cms-api/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.default_schema=cms
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://18.156.79.159:54325/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=Cloud5231!
