The IP address created by HttpUtil is defined to Aspect. We set setIp as ipAddress.

--- a/cms-api/pom.xml
+++ b/cms-api/pom.xml
@@ -21,6 +21,10 @@
             <artifactId>cms-dao</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.cms.cloud</groupId>
+            <artifactId>cms-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
