--- a/cms-api/src/main/resources/application.properties
+++ b/cms-api/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.default_schema=cms
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:postgresql://18.156.79.159:54325/postgres
-spring.datasource.username=postgres
-spring.datasource.password=Cloud5231!
+spring.datasource.username=
+spring.datasource.password=
 
 ##### EMAIL CONFIGURATION ####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ese.siri@gmail.com
-spring.mail.password= hgatoxuxparvqjah
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
