--- a/cms-api/src/main/resources/application.properties
+++ b/cms-api/src/main/resources/application.properties
@@ -1,20 +1,49 @@
-spring.application.name = cms-api
+spring.application.name = public-api
 
 server.port = 8081
 
 
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
-spring.jpa.hibernate.default_schema=cms
+spring.jpa.hibernate.default_schema=public
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://18.156.79.159:54325/postgres
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 ##### EMAIL CONFIGURATION ####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=ese.siri@gmail.com
+spring.mail.password=easx ulot mpto kazd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+email.from=ese.siri@gmail.com
+email.to=ese.siri@gmail.com
+email.username=ese.siri@gmail.com
+email.password=easx ulot mpto kazd
+
+# CORS Configuration
+spring.web.cors.allowed-origins=http://localhost:3000/
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=Authorization,Content-Type
+spring.web.cors.allow-credentials=true
+
+# ===============================
+# = LOGGING CONFIG
+# ===============================
+
+logging.file.name=_log/${spring.application.name}/application.log
+logging.pattern.file=%d %-5level [%thread] %logger : %msg%n
+logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+
+# ===============================
+# = LOGGING CONFIG ADDITIONAL
+# ===============================
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.data=debug
+logging.level.org.hibernate= ERROR
+logging.level.org.springframework.security.oauth2= DEBUG
