properties private update

--- a/cms-api/src/main/resources/application.properties
+++ b/cms-api/src/main/resources/application.properties
@@ -13,14 +13,14 @@ spring.datasource.password=1234
 ##### EMAIL CONFIGURATION ####
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ese.siri@gmail.com
-spring.mail.password=easx ulot mpto kazd
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-email.from=ese.siri@gmail.com
-email.to=ese.siri@gmail.com
-email.username=ese.siri@gmail.com
-email.password=easx ulot mpto kazd
+email.from=
+email.to=
+email.username=
+email.password=
 
 # CORS Configuration
 spring.web.cors.allowed-origins=http://localhost:3000/
